<resources>
    <string name="app_name">IT7099_VolunteerApp</string>

    <string name="register_btn">Register</string>
    <string name="password">Password</string>
    <string name="username">username</string>
    <string name="register">Register</string>
    <string name="login_btn">Login</string>
    <string name="logo_img">Logo</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="title_activity_add_organization">AddOrganization</string>
    <string name="hint_organizationName">organizationName</string>
    <string name="hint_mission">Organization Mission</string>
    <string name="hint_OrgEmail">organization_email</string>
    <string name="load_picture">Load Picture</string>
    <string name="img">img</string>
    <string name="title_activity_startup_page">startupPage</string>
    <string name="logo_icon">TODO</string>
    <string name="volunteer_portal">Volunteer portal</string>
    <string name="logo">TODO</string>
    <string name="RegisterBtn">Register</string>
    <string name="volunteer_portalBtn">Volunteer Portal</string>
    <string name="organization_portalBtn">Organization Portal</string>
    <string name="OrganizationLogin">TextView</string>
    <string name="first_name">First Name</string>
    <string name="last_name">LastName</string>
    <string name="gender">Gender</string>
    <string name="DOB">Date Of Birth</string>
    <string name="education">Education</string>
    <string name="skills">Skills</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="Gender">Gender</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="Email">Email</string>
    <string name="email">Email</string>
    <string name="txtPassword">Password</string>
    <string name="txtConfirmPassword">ConfirmPassword</string>
    <string name="btnRegister">Register</string>
    <string name="test">Button</string>
    <string name="btnLogin">Login</string>
    <string name="todo">TODOImg</string>
    <string name="todo1">TODO</string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <string name="txtLoginVolunteer">Volunteer Login</string>
    <string name="volunteerRegistration">Volunteer Registration</string>
</resources>
